SE-13 Fix some problems with adapltive design on greeting page.

--- a/front-end/less/shared/customBootstrap.less
+++ b/front-end/less/shared/customBootstrap.less
@@ -19,7 +19,17 @@
 .carousel {
     .carousel-caption {
         &.carousel-caption-top {
-            bottom: 320px;
+            bottom: 270px;
+        }
+    }
+
+    @media screen and (max-width: @mediumScreenWidth) {
+        .carousel-caption {
+            font-size: 15px;
+
+            &.carousel-caption-top {
+                bottom: 170px;
+            }
         }
     }
 
@@ -29,6 +39,14 @@
 
             &.carousel-caption-top {
                 bottom: 50px;
+            }
+        }
+    }
+
+    @media screen and (max-width: @tinyScreenWidth) {
+        .carousel-caption {
+            &.carousel-caption-top {
+                bottom: 20px;
             }
         }
     }
