--- a/front-end/less/views/greetingView.less
+++ b/front-end/less/views/greetingView.less
@@ -79,7 +79,7 @@
             }
         }
 
-        @media screen and (max-width: @mediumScreenWidth){
+        @media screen and (max-width: @largeScreenWidth){
             .example {
                 display: block;
                 padding-top: @exampleOffset - 10;
