--- a/front-end/css/core.css
+++ b/front-end/css/core.css
@@ -6,8 +6,8 @@
 
 .btn:focus,.btn:active,.btn:active:focus{outline:0}
 @media screen and (max-width:768px){.navbar .navbar-collapse .navbar-nav{float:none !important}}
-.carousel .carousel-caption.carousel-caption-top{bottom:320px}
-@media screen and (max-width:768px){.carousel .carousel-caption{font-size:10px}.carousel .carousel-caption.carousel-caption-top{bottom:50px}}
+.carousel .carousel-caption.carousel-caption-top{bottom:270px}
+@media screen and (max-width:992px){.carousel .carousel-caption{font-size:15px}.carousel .carousel-caption.carousel-caption-top{bottom:170px}}@media screen and (max-width:768px){.carousel .carousel-caption{font-size:10px}.carousel .carousel-caption.carousel-caption-top{bottom:50px}}@media screen and (max-width:480px){.carousel .carousel-caption.carousel-caption-top{bottom:20px}}
 
 
 
@@ -17,7 +17,7 @@
 @media screen and (max-width:992px){#greetingView .description .description-list{width:100%;padding:0 20px 0 40px;line-height:22px} #greetingView .description .description-image-container{display:block;text-align:center}#greetingView .description .description-image-container .description-image{display:inline-block}}
 #greetingView .system-work-examples{padding:20px;text-align:center}#greetingView .system-work-examples .example{display:inline-block;padding:0 30px 0 30px}#greetingView .system-work-examples .example .example-image.img-thumbnail{background-color:#22406e}
 #greetingView .system-work-examples .example .example-image:hover{transform:scale(1.15, 1.15)}
-@media screen and (max-width:992px){#greetingView .system-work-examples .example{display:block;padding-top:20px}}
+@media screen and (max-width:1200px){#greetingView .system-work-examples .example{display:block;padding-top:20px}}
 
 #signInView.sign-in-container{padding:20px}#signInView.sign-in-container .control-label{padding-left:15px;padding-top:0}
 #signInView.sign-in-container .panel-container{display:none}#signInView.sign-in-container .panel-container.active-panel-container{display:block}
