SE-17 Create all pages for authorization.
Following pages created:

1) insidePasswordChangingView.html
2) outsidePasswordChangingView.html
3) resetPasswordView.html
4) emailConfirmationView.html

Some JavaScript code was refactored.
Server side alerting was added.

--- a/front-end/less/views/emailConfirmationView.less
+++ b/front-end/less/views/emailConfirmationView.less
@@ -1,8 +1,8 @@
 @import "../shared/constants";
 @import "../shared/customMixins";
 
-#signInView {
-    &.sign-in-container {
+#emailConfirmationView {
+    &.email-confirmation-container {
         padding: @mainOffset;
 
         .control-label-mixin();
