--- a/front-end/css/core.css
+++ b/front-end/css/core.css
@@ -1,6 +1,7 @@
 .main-container{background-color:#f0f0f0;padding:50px 0 0 0}
 .numeric-list{padding-left:15px}.numeric-list .numeric-list-item{display:list-item;list-style:decimal}
 .activatable-element{display:none}.activatable-element.active{display:block}
+#alertList{display:none}
 
 
 
@@ -11,6 +12,8 @@
 
 
 
+#emailConfirmationView.email-confirmation-container{padding:20px}#emailConfirmationView.email-confirmation-container .control-label{padding-left:15px;padding-top:0}
+
 #greetingView .description .description-text{padding:0 20px 0 20px;font-size:18px}
 #greetingView .description .description-list{box-sizing:border-box;display:inline-block;width:80%;padding:0 50px;font-size:15px;line-height:25px}#greetingView .description .description-list .list-item{display:list-item;list-style:disc}
 #greetingView .description .description-image-container{display:inline-block;padding:10px 0 10px 0;vertical-align:top}#greetingView .description .description-image-container .description-image:hover{-webkit-box-shadow:0 0 13px 1px #39aea8;-moz-box-shadow:0 0 13px 1px #39aea8;box-shadow:0 0 13px 1px #39aea8}
@@ -19,10 +22,11 @@
 #greetingView .system-work-examples .example .example-image:hover{transform:scale(1.15, 1.15)}
 @media screen and (max-width:1200px){#greetingView .system-work-examples .example{display:block;padding-top:20px}}
 
+#passwordChangingView.password-changing-container{padding:20px}#passwordChangingView.password-changing-container .control-label{padding-left:15px;padding-top:0}
+
+#resetPasswordView.reset-password-container{padding:20px}#resetPasswordView.reset-password-container .control-label{padding-left:15px;padding-top:0}
+
 #signInView.sign-in-container{padding:20px}#signInView.sign-in-container .control-label{padding-left:15px;padding-top:0}
-#signInView.sign-in-container .panel-container{display:none}#signInView.sign-in-container .panel-container.active-panel-container{display:block}
-#signInView.sign-in-container .restoring-section{display:none}#signInView.sign-in-container .restoring-section.active-section{display:block}
 
 #signUpView.sign-up-container{padding:20px}#signUpView.sign-up-container .control-label{padding-left:15px;padding-top:0}
-#signUpView.sign-up-container .panel-container{display:none}#signUpView.sign-up-container .panel-container.active-panel-container{display:block}
-@media screen and (min-width:992px){#signUpView.sign-up-container .help-panel{height:620px}}
+@media screen and (min-width:992px){#signUpView.sign-up-container .help-panel{height:578px}}
