--- a/front-end/less/views/passwordChangingView.less
+++ b/front-end/less/views/passwordChangingView.less
@@ -1,8 +1,8 @@
 @import "../shared/constants";
 @import "../shared/customMixins";
 
-#signInView {
-    &.sign-in-container {
+#passwordChangingView {
+    &.password-changing-container {
         padding: @mainOffset;
 
         .control-label-mixin();
