--- a/front-end/less/views/resetPasswordView.less
+++ b/front-end/less/views/resetPasswordView.less
@@ -1,8 +1,8 @@
 @import "../shared/constants";
 @import "../shared/customMixins";
 
-#signInView {
-    &.sign-in-container {
+#resetPasswordView {
+    &.reset-password-container {
         padding: @mainOffset;
 
         .control-label-mixin();
