SE-6 Implement basic authentification backend Implement authentification with django-allauth application Transition pages for registration from front-end project to back-end project

--- a/back-end/greeting/templates/greeting/greeting.html
+++ b/back-end/greeting/templates/greeting/greeting.html
@@ -1,15 +1,19 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
+{% block title %}
+<title>Senseira : Greeting</title>
+{% endblock title %}
+
 {% block navbar_buttons %}
 <ul class="nav navbar-nav pull-right">
     <li>
-        <a href="#">
+        <a href="{% url 'account_signup' %}">
             Регистрация
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="{% url 'account_login' %}">
             Вход
         </a>
     </li>
