--- a/back-end/templates/base.html
+++ b/back-end/templates/base.html
@@ -3,15 +3,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Senseira : Greeting</title>
+    {% block title %}{% endblock title %}
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link type="text/css" rel="stylesheet" href="{% static 'css/reset.css' %}">
     <link type="text/css" rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.css' %}"/>
     <link type="text/css" rel="stylesheet" href="{% static 'css/bootstrap/bootstrap-theme.css' %}"/>
     <link type="text/css" rel="stylesheet" href="{% static 'css/core.css' %}">
+    <link type="text/css" rel="stylesheet" href="{% static 'css/animate.css' %}"/>
     <script type="text/javascript" src="{% static 'scripts/frameworks/jquery-2.2.0.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'scripts/frameworks/knockout-3.4.0.js' %}"></script>
+    <script type="text/javascript" src="{% static 'scripts/frameworks/jquery.noty.packaged.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'scripts/bootstrap/bootstrap.js' %}"></script>
+    <script type="text/javascript" src="{% static 'scripts/custom/alert.js' %}"></script>
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -22,22 +25,33 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Senseira</a>
+                <a class="navbar-brand" href="/">Senseira</a>
             </div>
             <div class="collapse navbar-collapse">
 
-                {% block navbar_buttons %}{% endblock %}
+                <ul class="nav navbar-nav pull-right">
+                    {% if user.is_authenticated %}
+                        <li><a href="/accounts/profile">{{ user.username }}</a></li>
+                        <li><a href="{% url 'account_logout' %}">Выйти</a></li>
+
+                    {% else %}
+                        <li><a href="{% url 'account_signup' %}">Регистрация</a></li>
+                        <li><a href="{% url 'account_login' %}">Войти</a></li>
+                    {% endif %}
+                </ul>
+
+                <!-- {% block navbar_buttons %}{% endblock %} -->
 
             </div>
         </div>
     </nav>
     <div class="container main-container body-content">
 
-        {% block  body_block %}{% endblock %}
+        {% block alert_list %}{% endblock alert_list %}
+        {% block  body_block %}{% endblock body_block %}
 
         <footer class="panel-footer">
             <p class="text-center">
-                Сайт спроектирован и воплощён в жизнь шестью студентами с лучшими намерениями</br>
                 BuddhaSoft &copy; Все права защищены.</br>
                 Текущая версия v0.0.0
             </p>
