--- a/front-end/css/core.css
+++ b/front-end/css/core.css
@@ -22,6 +22,9 @@
 #greetingView .system-work-examples .example .example-image:hover{transform:scale(1.15, 1.15)}
 @media screen and (max-width:1200px){#greetingView .system-work-examples .example{display:block;padding-top:20px}}
 
+#moduleSystemCreator.module-system-creator-container{padding:20px}
+#moduleSystemCreator .module-system-tree{min-height:50px}
+
 #passwordChangingView.password-changing-container{padding:20px}#passwordChangingView.password-changing-container .control-label{padding-left:15px;padding-top:0}
 
 #resetPasswordView.reset-password-container{padding:20px}#resetPasswordView.reset-password-container .control-label{padding-left:15px;padding-top:0}
