SE-22. Implemented tree view
• added highlighting node path
• added node name displaying
• started ko integration

TODO:
• switch to edit mode
• editor panel
• beautify less code
• apply ko bindings to tree nodes

--- a/front-end/css/core.css
+++ b/front-end/css/core.css
@@ -2,6 +2,7 @@
 .numeric-list{padding-left:15px}.numeric-list .numeric-list-item{display:list-item;list-style:decimal}
 .activatable-element{display:none}.activatable-element.active{display:block}
 #alertList,#validationErrorsList{display:none}
+.no-selection{-webkit-user-select:none;-moz-user-select:none;-khtml-user-select:none;-ms-user-select:none;}
 
 
 
@@ -24,9 +25,9 @@
 
 #moduleSystemCreator.module-system-creator-container{padding:20px}
 #moduleSystemCreator .module-system-view-tree{min-height:50px}
-#moduleSystemCreator .module-system-view-link{fill:none;stroke:#aac8f6;stroke-width:2}
-#moduleSystemCreator .module-system-view-node .module-system-view-node-text{font-size:120%;fill:#22406e}
-#moduleSystemCreator .module-system-view-node .module-system-view-node-circle{fill:#f0f0f0;stroke:#22406e;stroke-width:2px}
+#moduleSystemCreator .module-system-view-link{fill:none;stroke:#88a6d4;stroke-width:2}#moduleSystemCreator .module-system-view-link.module-system-view-hover{stroke:#22406e}
+#moduleSystemCreator .module-system-view-node{cursor:pointer}#moduleSystemCreator .module-system-view-node .module-system-view-node-text{font-size:110%;fill:#22406e}
+#moduleSystemCreator .module-system-view-node .module-system-view-node-circle{fill:#f0f0f0;stroke:#88a6d4;stroke-width:2px}#moduleSystemCreator .module-system-view-node .module-system-view-node-circle.module-system-view-hover{stroke:#22406e}
 #moduleSystemCreator .module-system-view-node .module-system-view-node-with-children{fill:#e0e0e0}
 
 #passwordChangingView.password-changing-container{padding:20px}#passwordChangingView.password-changing-container .control-label{padding-left:15px;padding-top:0}
