--- a/front-end/less/shared/customMixins.less
+++ b/front-end/less/shared/customMixins.less
@@ -10,3 +10,9 @@
         padding-top: 0;
     }
 }
+
+.d3tree-hover(@strokeColor) {
+    &.module-system-view-hover {
+        stroke: @strokeColor;
+    }
+}
