--- a/front-end/less/shared/customMixins.less
+++ b/front-end/less/shared/customMixins.less
@@ -10,3 +10,11 @@
         padding-top: 0;
     }
 }
+
+.disable-text-select-mixin() {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
+}
