SE-19 Implement of server-side validation of registration forms

--- a/back-end/register/templates/account/password_reset_from_key.html
+++ b/back-end/register/templates/account/password_reset_from_key.html
@@ -29,7 +29,23 @@
             <div class="panel-heading">Смена пароля:</div>
             <div class="panel-body">
                 <form class="form-horizontal" role="form" method="POST" data-bind="submit: beforeSubmit">
-                    {% csrf_token %}
+                  {% csrf_token %}
+                     <!-- Error list -->
+                    {% if form.errors %}
+
+                    <ul id="validationErrorsList">
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                        <li>{{ error }}</li>
+                        {% endfor %}
+                    {% endfor %}
+
+                    {% for error in form.non_field_errors %}
+                        <li>{{ error }} </li>
+                    {% endfor %}
+
+                    </ul>
+                    {% endif %}
                     <div class="alert alert-danger activatable-element" data-bind="css: { 'active' : isValidationErrorsExists() }">
                         <ul data-bind="foreach: validationErrors">
                             <li data-bind="text: $data"></li>
@@ -71,4 +87,5 @@
 <script type="text/javascript" src="{% static 'scripts/custom/initialAlerting.js' %}"></script>
 <script type="text/javascript" src="{% static 'scripts/senseira/baseForm.js' %}"></script>
 <script type="text/javascript" src="{% static 'scripts/senseira/outsidePasswordChanging.js' %}"></script>
+<script type="text/javascript" src="{% static 'scripts/senseira/constants.js' %}"></script>
 {% endblock body_script %}
