--- a/back-end/register/templates/account/password_change.html
+++ b/back-end/register/templates/account/password_change.html
@@ -18,6 +18,22 @@
             <div class="panel-body">
                 <form class="form-horizontal" method="post" role="form" data-bind="submit: beforeSubmit">
                     {% csrf_token %}
+                    <!-- Error list -->
+                    {% if form.errors %}
+
+                    <ul id="validationErrorsList">
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                        <li>{{ error }}</li>
+                        {% endfor %}
+                    {% endfor %}
+
+                    {% for error in form.non_field_errors %}
+                        <li>{{ error }} </li>
+                    {% endfor %}
+
+                    </ul>
+                    {% endif %}
                     <div class="alert alert-danger activatable-element" data-bind="css: { 'active' : isValidationErrorsExists() }">
                         <ul data-bind="foreach: validationErrors">
                             <li data-bind="text: $data"></li>
@@ -60,4 +76,5 @@
 <script type="text/javascript" src="{% static 'scripts/custom/initialAlerting.js' %}"></script>
 <script type="text/javascript" src="{% static 'scripts/senseira/baseForm.js' %}"></script>
 <script type="text/javascript" src="{% static 'scripts/senseira/insidePasswordChanging.js' %}"></script>
+<script type="text/javascript" src="{% static 'scripts/senseira/constants.js' %}"></script>
 {% endblock body_script %}
