--- a/back-end/register/templates/account/password_reset.html
+++ b/back-end/register/templates/account/password_reset.html
@@ -21,7 +21,23 @@
             <div class="panel-heading">Сброс пароля:</div>
             <div class="panel-body">
                 <form class="form-horizontal" method="POST" role="form" data-bind="submit: beforeSubmit">
-                    {% csrf_token %}
+                  {% csrf_token %}
+                    <!-- Error list -->
+                    {% if form.errors %}
+
+                    <ul id="validationErrorsList">
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                        <li>{{ error }}</li>
+                        {% endfor %}
+                    {% endfor %}
+
+                    {% for error in form.non_field_errors %}
+                        <li>{{ error }} </li>
+                    {% endfor %}
+
+                    </ul>
+                    {% endif %}
                     <div class="alert alert-danger activatable-element" data-bind="css: { 'active' : isValidationErrorsExists() }">
                         <ul data-bind="foreach: validationErrors">
                             <li data-bind="text: $data"></li>
@@ -52,4 +68,5 @@
 <script type="text/javascript" src="{% static 'scripts/custom/initialAlerting.js' %}"></script>
 <script type="text/javascript" src="{% static 'scripts/senseira/baseForm.js' %}"></script>
 <script type="text/javascript" src="{% static 'scripts/senseira/resetPassword.js' %}"></script>
+<script type="text/javascript" src="{% static 'scripts/senseira/constants.js' %}"></script>
 {% endblock %}
