--- a/back-end/register/templates/account/signup.html
+++ b/back-end/register/templates/account/signup.html
@@ -18,7 +18,24 @@
             <div class="panel-body">
 
                 <form class="form-horizontal" role="form" id="signup_form" action="/accounts/signup/" method="post" data-bind="submit: beforeSubmit">
-                    {% csrf_token %}
+                  {% csrf_token %}
+                  <!-- Error list -->
+                    {% if form.errors %}
+
+                    <ul id="validationErrorsList">
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                        <li>{{ error }}</li>
+                        {% endfor %}
+                    {% endfor %}
+
+                    {% for error in form.non_field_errors %}
+                        <li>{{ error }} </li>
+                    {% endfor %}
+
+                    </ul>
+                    {% endif %}
+
                     <div class="alert alert-danger activatable-element" data-bind="css: { 'active' : isValidationErrorsExists() }">
                         <ul data-bind="foreach: validationErrors">
                             <li data-bind="text: $data"></li>
@@ -112,4 +129,5 @@
 <script type="text/javascript" src="{% static 'scripts/custom/initialAlerting.js' %}"></script>
 <script type="text/javascript" src="{% static 'scripts/senseira/baseForm.js' %}"></script>
 <script type="text/javascript" src="{% static 'scripts/senseira/signUp.js' %}"></script>
+<script type="text/javascript" src="{% static 'scripts/senseira/constants.js' %}"></script>
 {% endblock %}
