--- a/front-end/less/shared/common.less
+++ b/front-end/less/shared/common.less
@@ -27,3 +27,9 @@
 #validationErrorsList {
     display: none;
 }
+
+.filters-group {
+    padding: (@mainOffset / 2) (@mainOffset + @mainColumnOffset);
+    background-color: @footerAndHeaderBackground;
+    border-bottom: 1px solid @footerAndHeaderBorderColor;
+}
