--- a/front-end/less/shared/constants.less
+++ b/front-end/less/shared/constants.less
@@ -4,7 +4,9 @@
 @largeScreenWidth: 1200px;
 
 @mainOffset: 20px;
+@mainColumnOffset: 15px;
 
 @mainBlueColor: #22406E;
 @mainContainerBackground: #f0f0f0;
-
+@footerAndHeaderBackground: #f5f5f5;
+@footerAndHeaderBorderColor: #ddd;
