--- a/front-end/css/core.css
+++ b/front-end/css/core.css
@@ -14,7 +14,7 @@
 .single-select-list-container{background-color:#fff;border-radius:5px;-moz-user-select:none;-webkit-user-select:none;-ms-user-select:none;-khtml-user-select:none;user-select:none}.single-select-list-container .scroll-button{padding:0 5px;text-align:center;cursor:pointer}.single-select-list-container .scroll-button .glyphicon:before{font-size:11px;line-height:11px}
 .single-select-list-container .scroll-button:hover{background-color:#e1e1e1}
 .single-select-list-container .scroll-button:active{background-color:#c8c8c8}
-.single-select-list-container .single-select-list{margin-bottom:0;border-top:1px solid #ccc;border-bottom:1px solid #ccc}.single-select-list-container .single-select-list .single-select-list-item{box-sizing:border-box;padding:5px;cursor:pointer}.single-select-list-container .single-select-list .single-select-list-item:not(:last-child){border-bottom:1px solid #ccc}
+.single-select-list-container .single-select-list{margin-bottom:0;border-top:1px solid #ccc;border-bottom:1px solid #ccc}.single-select-list-container .single-select-list .single-select-list-item{box-sizing:border-box;min-height:72px;padding:5px;cursor:pointer}.single-select-list-container .single-select-list .single-select-list-item:not(:last-child){border-bottom:1px solid #ccc}
 .single-select-list-container .single-select-list .single-select-list-item .item-title{margin:3px 0;font-size:14px;font-weight:bold}
 .single-select-list-container .single-select-list .single-select-list-item .item-text{margin:0}
 .single-select-list-container .single-select-list .single-select-list-item.type-one{background-color:#dc4a3d}.single-select-list-container .single-select-list .single-select-list-item.type-one .item-title{color:#f7f7f7}
@@ -53,6 +53,7 @@
 @media screen and (max-width:1200px){#greetingView .system-work-examples .example{display:block;padding-top:20px}}
 
 #labsIssuanceView.labs-issuance-container{padding:20px}#labsIssuanceView.labs-issuance-container .control-label{padding-left:15px;padding-top:0}
+#labsIssuanceView.labs-issuance-container .task-adding-button-container{padding:10px 0}
 
 #passwordChangingView.password-changing-container{padding:20px}#passwordChangingView.password-changing-container .control-label{padding-left:15px;padding-top:0}
 
