--- a/front-end/less/components/singleSelectList.less
+++ b/front-end/less/components/singleSelectList.less
@@ -7,6 +7,7 @@
 @singleSelectListItemTitleMargin: 3px 0;
 @singleSelectListItemTextMargin: 0;
 @singleSelectListItemSelectedBorder: 3px solid #fff;
+@singleSelectListItemMinHeight: 72px;
 
 @titleTextColor: #F7F7F7;
 
@@ -40,6 +41,7 @@
 
         .single-select-list-item {
             box-sizing: border-box;
+            min-height: @singleSelectListItemMinHeight;
             padding: @singleSelectListItemPadding;
             cursor: pointer;
 
