SE-23 Implement labs issuance page.
Partially completed.

--- a/front-end/less/shared/common.less
+++ b/front-end/less/shared/common.less
@@ -33,3 +33,7 @@
     background-color: @footerAndHeaderBackground;
     border-bottom: 1px solid @footerAndHeaderBorderColor;
 }
+
+.inline-container {
+    display: inline-block;
+}
