--- a/front-end/less/views/labsIssuanceView.less
+++ b/front-end/less/views/labsIssuanceView.less
@@ -1,6 +1,9 @@
 @import "../shared/constants";
 @import "../shared/customMixins";
 
+@variantListContainerBorder: 1px solid #ccc;
+@variantListLargeMaxHeight: 160px;
+
 #labsIssuanceView {
     &.labs-issuance-container {
         padding: @mainOffset;
@@ -9,6 +12,39 @@
 
         .task-adding-button-container {
             padding: 10px 0;
+        }
+
+        #taskIssuanceForm {
+            .task-issuance-panel {
+                .task-title {
+                    font-weight: bold;
+                }
+
+                .entered-text {
+                    font-weight: bold;
+                }
+
+                .variant-list-container {
+                    .variant-list {
+                        .variant {
+                            padding-bottom: 10px;
+
+                            .variant-label {
+                                font-weight: bold;
+                            }
+                        }
+                    }
+                }
+
+                @media screen and (min-width: @largeScreenWidth) {
+                    .variant-list-container {
+                        .variant-list {
+                            max-height: @variantListLargeMaxHeight;
+                            overflow-y: scroll;
+                        }
+                    }
+                }
+            }
         }
     }
 }
