--- a/front-end/css/core.css
+++ b/front-end/css/core.css
@@ -32,6 +32,7 @@
 .activatable-element{display:none}.activatable-element.active{display:block}
 #alertList,#validationErrorsList{display:none}
 .filters-group{padding:10px 35px;background-color:#f5f5f5;border-bottom:1px solid #ddd}
+.inline-container{display:inline-block}
 
 
 
@@ -54,6 +55,10 @@
 
 #labsIssuanceView.labs-issuance-container{padding:20px}#labsIssuanceView.labs-issuance-container .control-label{padding-left:15px;padding-top:0}
 #labsIssuanceView.labs-issuance-container .task-adding-button-container{padding:10px 0}
+#labsIssuanceView.labs-issuance-container #taskIssuanceForm .task-issuance-panel .task-title{font-weight:bold}
+#labsIssuanceView.labs-issuance-container #taskIssuanceForm .task-issuance-panel .entered-text{font-weight:bold}
+#labsIssuanceView.labs-issuance-container #taskIssuanceForm .task-issuance-panel .variant-list-container .variant-list .variant{padding-bottom:10px}#labsIssuanceView.labs-issuance-container #taskIssuanceForm .task-issuance-panel .variant-list-container .variant-list .variant .variant-label{font-weight:bold}
+@media screen and (min-width:1200px){#labsIssuanceView.labs-issuance-container #taskIssuanceForm .task-issuance-panel .variant-list-container .variant-list{max-height:160px;overflow-y:scroll}}
 
 #passwordChangingView.password-changing-container{padding:20px}#passwordChangingView.password-changing-container .control-label{padding-left:15px;padding-top:0}
 
