--- a/front-end/less/shared/customMixins.less
+++ b/front-end/less/shared/customMixins.less
@@ -12,7 +12,7 @@
 }
 
 .d3tree-hover(@strokeColor) {
-    &.module-system-view-hover {
+    &.d3tree-hover {
         stroke: @strokeColor;
     }
 }
