--- a/front-end/less/views/moduleSystemCreatorView.less
+++ b/front-end/less/views/moduleSystemCreatorView.less
@@ -6,29 +6,31 @@
   @treeNodeHoverColor: @mainBlueColor;
   @treeNodeWithChildrenColor: @mainContainerBackground - #101010;
 
-  &.module-system-creator-container {
-    padding: @mainOffset;
-  }
+  padding: @mainOffset;
 
   & .module-system-view-tree {
-    min-height: 50px;
+    min-height: 400px;
   }
 
-  & .module-system-view-link {
+  & .module-system-view-editor {
+    display: none;
+    position: fixed;
+  }
+
+  & .d3tree-link {
     .d3tree-hover(@treeNodeHoverColor);
     fill: none;
     stroke: @treeLinkColor;
     stroke-width: 2;
   }
 
-  & .module-system-view-node {
+  & .d3tree-node {
     cursor: pointer;
-    & .module-system-view-node-text {
-      font-size: 110%;
+    & .d3tree-node-text {
       fill: @treeNodeHoverColor;
     }
 
-    & .module-system-view-node-circle {
+    & .d3tree-node-circle {
       .d3tree-hover(@treeNodeHoverColor);
       fill: @mainContainerBackground;
       stroke: @treeLinkColor;
@@ -36,8 +38,21 @@
 
     }
 
-    & .module-system-view-node-with-children {
+    & .d3tree-node-with-children {
       fill: @treeNodeWithChildrenColor;
+    }
+  }
+
+  & .d3tree-node-context-option {
+    fill: none;
+    stroke: none;
+    & .glyphicon {
+      &:hover {
+        color: @mainBlueColor;
+      }
+      color: @mainBlueColor + #333;
+      position: static;
+      cursor: pointer;
     }
   }
 }
