SE-22. Implement module system creator page
• added path highlighting for editing node

--- a/front-end/css/core.css
+++ b/front-end/css/core.css
@@ -25,9 +25,11 @@
 
 #moduleSystemCreator{padding:20px}#moduleSystemCreator .module-system-view-tree{min-height:400px}
 #moduleSystemCreator .module-system-view-editor{display:none;position:fixed}
-#moduleSystemCreator .d3tree-link{fill:none;stroke:#88a6d4;stroke-width:2}#moduleSystemCreator .d3tree-link.d3tree-hover{stroke:#22406e}
+#moduleSystemCreator .d3tree-link{fill:none;stroke:#88a6d4;stroke-width:2}#moduleSystemCreator .d3tree-link.d3tree-selected{stroke:#446290}
+#moduleSystemCreator .d3tree-link.d3tree-hover{stroke:#22406e}
 #moduleSystemCreator .d3tree-node{cursor:pointer}#moduleSystemCreator .d3tree-node .d3tree-node-text{fill:#22406e}
-#moduleSystemCreator .d3tree-node .d3tree-node-circle{fill:#f0f0f0;stroke:#88a6d4;stroke-width:2px}#moduleSystemCreator .d3tree-node .d3tree-node-circle.d3tree-hover{stroke:#22406e}
+#moduleSystemCreator .d3tree-node .d3tree-node-circle{fill:#f0f0f0;stroke:#88a6d4;stroke-width:2px}#moduleSystemCreator .d3tree-node .d3tree-node-circle.d3tree-selected{stroke:#446290}
+#moduleSystemCreator .d3tree-node .d3tree-node-circle.d3tree-hover{stroke:#22406e}
 #moduleSystemCreator .d3tree-node .d3tree-node-with-children{fill:#e0e0e0}
 #moduleSystemCreator .d3tree-node-context-option{fill:none;stroke:none}#moduleSystemCreator .d3tree-node-context-option .glyphicon{color:#5573a1;position:static;cursor:pointer}#moduleSystemCreator .d3tree-node-context-option .glyphicon:hover{color:#22406e}
 
